<resources>
    <string name="app_name">Getit</string>
    <string name="app_name_final">Get\'it</string>
    <string name="error_body_internet_connection_required">An internet connection is required</string>
    <string name="google_geocode_url">https://maps.googleapis.com/maps/api/geocode/json</string>
    <string name="google_api_url">maps.googleapis.com</string>
    <string name="facebook_search">graph.facebook.com</string>
    <string name="twitter_search">api.twitter.com</string>
    <string name="text_search_hint">Search term</string>
    <string name="text_search">Search</string>
    <string name="text_default_address">No Address</string>
    <string name="text_default_link">No link/phone number</string>
    <string name="text_default_location">Current location not found</string>
    <string name="text_no_maps_app">No Maps application detected, please make sure you have Google maps installed.</string>
    <string name="text_hint_search">Search Term</string>
    <string name="text_hint_radius">Search Radius (KM)</string>
    <string name="text_use_location">Use My Location</string>
    <string name="title_navigation">Navigate</string>
    <string name="title_error">Error</string>
    <string name="title_warning">Warning</string>
    <string name="text_invalid_search_request">Please provide a search term</string>
    <string name="twitter_api_key">Si9c6oE4mf5KgbKoo9PjV1RTd</string>
    <string name="twitter_api_secret_key">UX5flKsecXGstMMKIuURg5PCjiYVaMwMlM6lw0OMbioMqaR0Vo</string>
    <string name="sentence_navigation_message">Continuing with this action will open an external application. Do you want to continue?</string>
    <string name="sentence_no_location">This place has no location!</string>
    <string name="sentence_no_current_location">Could not get your current location, Do you want to continue?</string>
    <string name="sentence_location_permissions_not_granted">You need to allow the application to access the device\'s Location to continue! \n\nDo you wish to prompt the permission request again?</string>
    <string name="text_shared_pref_location_radius">location_radius</string>
    <string name="text_shared_pref_use_current_location">use_current_location</string>
    <string name="text_drawer_closed">Drawer Closed</string>
    <string name="text_drawer_opened">Drawer Open</string>
    <string name="text_yes_caps">YES</string>
    <string name="text_no_caps">NO</string>
    <string name="title_exit">Exit</string>
    <string name="sentence_exit_app_confirmation">Are you sure you wish to exit?</string>
    <string name="text_loading_location">Waiting for location...</string>
    <string name="sentence_no_internet_access">No internet access, please try again later</string>
    <string name="text_no_place_found">No place found</string>
    <string name="text_try_again">Try again</string>

    <string-array name="drawer_items">
        <item>Logo</item>
        <item>Location Radius</item>
        <item>Use my current location</item>
    </string-array>
</resources>
