<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:openDrawer="right"
    android:focusableInTouchMode="true"
    tools:context="com.smartalgorithms.getit.Home.HomeActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|enterAlways">-->
            <RelativeLayout
                android:id="@+id/rlyt_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|enterAlways"
                >

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:minHeight="?attr/actionBarSize"
                android:background="@color/blue"
                app:theme="@style/MyToolbarDark"
                android:visibility="visible"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_final"
                    tools:ignore="MissingPrefix"
                    fontPath="fonts/GothamRoundedBook.ttf"
                    android:textSize="28sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical|center_horizontal" />

            </android.support.v7.widget.Toolbar>

                <ImageView
                    android:id="@+id/iv_navigation_drawer"
                    android:layout_width="60dp"
                    android:layout_height="?attr/actionBarSize"
                    android:padding="20dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/img_menu"
                    android:visibility="gone"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lav_navigation_drawer"
                    android:layout_width="60dp"
                    android:layout_height="?attr/actionBarSize"
                    android:padding="20dp"
                    android:layout_alignParentRight="true"
                    app:lottie_colorFilter="@color/white"
                    app:lottie_loop="false"
                    android:visibility="gone"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlyt_search_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_search_term"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:layout_marginRight="60dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp">
                        <EditText
                            android:id="@+id/et_search_term"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionSearch"
                            android:inputType="text"
                            android:hint="@string/text_search_hint"
                            android:textColorHint="@color/grey_hint"
                            android:textColor="@color/grey_text"
                            android:textSize="22sp"
                            />
                    </android.support.design.widget.TextInputLayout>
                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/effect_button_primary_circle"
                    android:padding="12dp"
                    android:src="@drawable/img_search"
                    tools:ignore="MissingConstraints" />


            </RelativeLayout>
            <!--</LinearLayout>-->

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:id="@+id/rlyt_main_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBarLayout"
            android:layout_above="@+id/tv_location"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_places"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/tv_location"
                android:scrollbars="none"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
            <TextView
                android:id="@+id/tv_no_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@color/darkBlue_text_weak"
                android:text="@string/text_no_place_found"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_try_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv_no_place"
                android:layout_marginTop="320dp"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:text="@string/text_try_again"
                android:visibility="gone"/>

            <ScrollView
                android:id="@+id/rlyt_default_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/tv_content_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:paddingTop="20dp"
                    android:text="Sure to Get'it"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary_light"
                    android:gravity="center_horizontal"/>
                <LinearLayout
                    android:id="@+id/llyt_content_2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@id/tv_content_1"
                    android:orientation="vertical"
                    android:background="@color/colorPrimary_light">

                    <TextView
                        android:id="@+id/tv_content_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textSize="60sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/blue"
                        android:text="Any"/>
                    <TextView
                        android:id="@+id/tv_content_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/blue"
                        android:text="(Closest)"/>
                    <TextView
                        android:id="@+id/tv_content_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:textSize="50sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:text="restaurant"/>
                    <TextView
                        android:id="@+id/tv_content_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/blue"
                        android:text="you can think of"/>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/rlyt_conten_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llyt_content_2"
                    android:layout_marginTop="4dp">

                    <ImageView
                        android:id="@+id/iv_african_food"
                        android:layout_width="256dp"
                        android:layout_height="170dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/img_african_food"/>

                    <TextView
                        android:id="@+id/tv_african"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="72dp"
                        android:layout_marginLeft="16dp"
                        android:gravity="start"
                        android:textAllCaps="true"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/blue"
                        android:text="African"
                        />
                        <TextView
                        android:id="@+id/tv_food"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="72dp"
                        android:layout_marginLeft="124dp"
                        android:gravity="start"
                        android:textAllCaps="true"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="Cuisine"/>
                </RelativeLayout>


            </RelativeLayout>
            </ScrollView>
            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_alignParentBottom="true"
                android:gravity="bottom|center_horizontal"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textSize="12sp"
                android:elevation="30dp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlyt_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent_black_95"
            android:elevation="10dp"
            android:visibility="gone">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lav_loading"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_centerInParent="true"
                app:lottie_colorFilter="@color/white"
                app:lottie_loop="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyt_loading_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent_black_95"
            android:elevation="10dp"
            android:visibility="gone">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lav_loading_location"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_centerInParent="true"
                app:lottie_loop="true" />

            <TextView
                android:id="@+id/tv_loading_location"
                android:layout_below="@+id/lav_loading_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/text_loading_location"/>
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>
    <ListView android:id="@+id/lv_right_drawer"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:layout_gravity="left"
        android:choiceMode="singleChoice"
        android:divider="@drawable/shape_red_line_thin"
        android:visibility="visible"
        android:background="@color/white"/>
</android.support.v4.widget.DrawerLayout>